[package]
name = "desk"
version = "0.1.1"
authors = ["Andrzej Klajnert <github@aklajnert.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
idasen = "0.1.0"
toml = "0.5.6"
serde = { version = "1.0", features = ["derive"] }
shellexpand = "2.0.0"
failure = "0.1.8"
clap = "2.33.3"