[package]
name = "idesk"
version = "0.1.9"
authors = ["Andrzej Klajnert <github@aklajnert.pl>"]
edition = "2018"
description = "Control the IDASEN desk position via bluetooth."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
idasen = "0.1.4"
toml = "0.5.8"
serde = { version = "1.0.123", features = ["derive"] }
shellexpand = "2.1.0"
failure = "0.1.8"
clap = "2.33.3"
